--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "require-dev": {
     "phpunit/phpunit": "^7.1",
-    "squizlabs/php_codesniffer": "3.*"
+    "squizlabs/php_codesniffer": "^3.3.2"
   },
   "license": "MIT",
   "authors": [
