--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 language: php
 
 php:
-    - 7.1
-    - 7.2
-    - 7.3
+    - 7.4
 
 before_script:
-    - travis_retry composer self-update
-    - travis_retry composer install --no-interaction --prefer-source
+    - composer install --no-interaction --prefer-source
 
 script:
     - ./vendor/bin/phpcs --standard=PSR2 ./src ./tests
