--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
   "description": "Environment Config class",
   "type": "library",
   "require-dev": {
-    "phpunit/phpunit": "^7.1",
-    "squizlabs/php_codesniffer": "^3.3.2"
+    "phpunit/phpunit": "^9.2",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "license": "MIT",
   "authors": [
@@ -15,7 +15,8 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.4",
+    "vlucas/phpdotenv": "^5.0"
   },
   "autoload": {
     "psr-4": {
@@ -31,7 +32,7 @@
     "process-timeout": 1800,
     "sort-packages": true,
     "platform": {
-      "php": "7.1"
+      "php": "7.4"
     }
   },
   "scripts": {
