--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
   "description": "Environment Config class",
   "type": "library",
   "require-dev": {
-    "phpunit/phpunit": "^7.1",
-    "squizlabs/php_codesniffer": "^3.3.2"
+    "phpunit/phpunit": "^9.5",
+    "squizlabs/php_codesniffer": "^3.7"
   },
   "license": "MIT",
   "authors": [
@@ -15,7 +15,7 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.4"
   },
   "autoload": {
     "psr-4": {
@@ -31,12 +31,14 @@
     "process-timeout": 1800,
     "sort-packages": true,
     "platform": {
-      "php": "7.1"
+      "php": "7.4"
     }
   },
   "scripts": {
     "lint": "./vendor/bin/phpcs --standard=PSR2 ./src ./tests",
     "phpcbf": "./vendor/bin/phpcbf --standard=PSR2 ./src ./tests",
-    "test": "./vendor/bin/phpunit"
+    "test": "./vendor/bin/phpunit",
+    "cover-xml": "./vendor/bin/phpunit --coverage-clover=coverage.xml",
+    "cover": "./vendor/bin/phpunit --coverage-text"
   }
 }
